增加物料关系