@@ -26,10 +26,13 @@ repositories {
 }
 
 dependencies {
+    implementation('org.dromara.hutool:hutool-all:6.0.0-M21')
+    implementation('com.alibaba.fastjson2:fastjson2:2.0.57')
     implementation('com.baomidou:mybatis-plus-spring-boot3-starter:3.5.12')
     implementation 'org.springframework.boot:spring-boot-starter-web'
     compileOnly 'org.projectlombok:lombok'
-    runtimeOnly 'com.h2database:h2'
+    runtimeOnly 'com.mysql:mysql-connector-j'
+//    runtimeOnly 'com.h2database:h2'
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
@@ -40,4 +43,8 @@ dependencies {
 
 tasks.named('test') {
     useJUnitPlatform()
+    jvmArgs += [
+            '-Djdk.instrument.traceUsage',
+            '-XX:+EnableDynamicAgentLoading'
+    ]
 }
